--- a/app/users/users.html
+++ b/app/users/users.html
@@ -1,4 +1,32 @@
 <div class="container">
-
-    {{content}}
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Description</th>
+                <th>Operate</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users">
+                <td>{{user.id}}</td>
+                <td>{{user.name}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.phone}}</td>
+                <td>{{user.des}}</td>
+                <td>
+                    <button (click)="edit(user)" 
+                            type="button" 
+                            class="btn btn-primary btn-sm">Edit</button>  
+                    <button (click)="edit(user)"
+                            type="button" 
+                            class="btn btn-danger btn-sm">Delete</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
+
